--- a/experiences.html
+++ b/experiences.html
@@ -32,13 +32,20 @@
             <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="experiences-cover.jpg" alt="Experiences Cover">
             </div>
+            <div class="centered">
+                <hr class="main-line">
+                <p id="header-text" class="main-header-font">
+                    EXPERIENCES
+                </p>
+                <hr class="main-line">
+            </div>
             <a href="#index-buttons" class="arrow-container no-decoration">
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <span class="arrow-text">Scroll down</span>
             </a>
-            <div>
+            <div id="index-buttons">
                 <p class="header-font center margin-thirty">
                     ~ coming soon ~
                 </p>
