--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             </div>
             <div class="centered">
                 <hr class="main-line">
-                <p class="main-header-font">
+                <!-- <p id="home" class="main-header-font">
+                    HOME
+                </p> -->
+                <p id="header-text" class="main-header-font">
                     HOME
                 </p>
                 <hr class="main-line">
@@ -122,8 +125,8 @@
             <hr>
             <button class="accordion">WHAT OTHERS THINK OF ME...</button>
             <div class="panel">
-                <p>" " - ICT & Business Teacher
-                <br><br>
+                <!-- <p>" " - ICT & Business Teacher -->
+                <!-- <br><br> -->
                 "I had the pleasure of teaching Catherine Mathematics 11 & 12 and Advanced Placement 
                 Calculus. Catherine was accelerated in Math in high school and was able to complete her 
                 University level Calculus in her grade 11 year. In my 35 years of teaching many 
@@ -131,10 +134,10 @@
                 student combining academics, volunteer work, personality and social responsibility. As an 
                 honour roll student, she was highly regarded by both staff and peers for her excellent 
                 work habits and high standard of achievement." - Math Teacher
+                <!-- <br><br> -->
+                <!-- " " - some prof -->
                 <br><br>
-                " " - some prof
-                <br><br>
-                " " - some senior friendo
+                "Catherine is a passionate, curious, and hardworking individual who continually pushes herself to try new things. As a first year university student, she has already gotten involved in many extracirricular activites such as being an organizer for the Tech+ Mentorship Program to joining many clubs such as UW Hip Hop and UW WiSTEM. Outside of school, she has also explored several areas of programming, namely game development, where she created and launched her own mobile game on the Google Play Store - Tappy Cat." - Organization Lead
                 </p>
             </div>
             <!-- <div class="instagram-background">
@@ -206,7 +209,8 @@
                 <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
-    </div>>
+    </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="Script.js"></script>
     </body>
 </html>
