--- a/interests.html
+++ b/interests.html
@@ -33,13 +33,20 @@
             <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="interests-cover.jpg" alt="Interests Cover">
             </div>
+            <div class="centered">
+                <hr class="main-line">
+                <p id="header-text" class="main-header-font">
+                    INTERESTS
+                </p>
+                <hr class="main-line">
+            </div>
             <a href="#index-buttons" class="arrow-container no-decoration">
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <span class="arrow-text">Scroll down</span>
             </a>
-            <div class="interests-blurb">
+            <div id="index-buttons" class="interests-blurb">
                 <p class="blurb-font justify"> Without a doubt, I have been passionate about many
                     things within my lifetime. As expected, some of these passions were
                     short and some were long. Here, I'll be talking about four of my
@@ -144,39 +151,21 @@
                 <div class="photoo-text-grid">
                     <div class="photoo-text-grid__item photoo-text-grid__item--1 other-vert-align">
                         <p class="info-text-font center">
-                            At the age of five, I began learning piano. Honestly, I can’t say
-                            I remember much other than the fact that there were many times when
-                            I didn’t feel like practicing, annoyed by how slowly I was
-                            improving and how repetitive practicing was. I would complain about
-                            this and my parents would ask me if I wanted to quit. Every time,
-                            this question would immediately quiet me because I refused to not
-                            be able to reach a certain speed or evoke a certain emotion or
-                            achieve a certain sense of clarity or so on. Before I knew it, I
-                            found myself looking forward to the challenge of being able to
-                            overcome these struggles. I started setting more goals and I became
-                            more passionate about music. I began to try more
-                            instruments on my own time, in school and in cadet band such as the
-                            violin, flute, alto saxophone and ukulele.
+                            From as far back as I can remember, I was involved with athletics. In fact, as a child, I admired and looked up to Olympic gymnasts and figure skaters. I actually wanted to become one. At the age of five, I participated in ballet, skating and swimming. Since then, I’ve tried many sports such as badminton, volleyball, table tennis, basketball, ultimate frisbee, hip hop and more! I signed up for classes, attended open gym sessions, participated in intramural and joined school athletic teams. To this day, I still have a multitude of memories accumulated from my many years involved with athletics and I hope to create even more.
                     </div>
                     <div class="photoo-text-grid__item photoo-text-grid__item--2">
-                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                        <img src="athletics-cover.JPG" class="photo-gallery" alt="">
                     </div>
                 </div>
                 <div class="memory-grid">
                     <div class="container">
-                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <img src="athletics-fav.JPG" class="photo-gallery memory-grid__item memory-grid__item--1">
                         <div class="caption-white">
                             <p class="memory-header-font">
                                 Favourite Memory
                             </P>
                             <p class="memory-text-font">
-                                At the Tom Lee Centre in Vancouver of 2014??, I
-                                played my heart out in front of two examiners in a one-hour
-                                performance. Despite my stage fright, I enjoyed the feeling of being
-                                able to demonstrate all the hard work I have put into practicing
-                                within the ten years prior. Through all the tears and smiles, and the
-                                failures and successes, I was able to come out and put on a show;
-                                thus, earning my Associate Diploma of Music in Piano Performance.
+                                I don’t have a particular favourite memory but I am proud of a number of achievements I received such as Most Improved, Team Spirit, Best Athlete (throughput each of my years in high school) and Park Miller Award. The way I got involved with joining school teams came from a teacher recommendation in elementary school. She encouraged me to participate on the girls basketball team after subbing for our teacher one day. Without this encouragement, I may have not experienced all the enjoyment and created all the connections that I did.
                             </p>
                         </div>
                     </div>
@@ -184,9 +173,8 @@
                 <div class="margin-thirty-sides lessons-style">
                     <p class="header-font">Lessons:</p>
                     <p class="text-font">
-                        <br>- Things don’t just show up within a day (no matter how much we may wish it). Hard work and time creates results.
-                        <br>- Being able to prioritize and managing time will improve your quality of life greatly.
-                        <br>- There are ups and downs in life but you WILL get through.
+                        <br>- The skills and abilities you develop come from failing over and over again.
+                        <br>- Without patience, commitment and persistence, you will never be able to improve.
                     </p>
                 </div>
             </div>
@@ -200,7 +188,7 @@
                 </div>
                 <div class="photo-text-grid">
                     <div class="photo-text-grid__item photo-text-grid__item--1">
-                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                        <img src="gaming-cover.JPG" class="photo-gallery" alt="">
                     </div>
                     <div class="photo-text-grid__item photo-text-grid__item--2 other-vert-align">
                         <p class="info-text-font center">
@@ -212,12 +200,12 @@
                             I grew older, the characters, stories and dynamics of
                             computer games, and the conversations with engineering
                             professionals sparked my fascination and grew into a desire
-                            to experiment with coding on my own and __.
+                            to experiment with coding and make my own game.
                     </div>
                 </div>
                 <div class="memory-grid">
                     <div class="container">
-                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <img src="gaming-fav.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
                         <div class="caption">
                             <p class="memory-header-font">
                                 Favourite Memory
@@ -255,7 +243,7 @@
                 </div>
                 <div class="photoo-text-grid">
                     <div class="photoo-text-grid__item photoo-text-grid__item--2">
-                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                        <img src="music-cover.jpg" class="photo-gallery" alt="">
                     </div>
                     <div class="photoo-text-grid__item photoo-text-grid__item--1 other-vert-align">
                         <p class="info-text-font center">
@@ -276,13 +264,13 @@
                 </div>
                 <div class="memory-grid">
                     <div class="container">
-                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <img src="music-fav.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
                         <div class="caption-white">
                             <p class="memory-header-font">
                                 Favourite Memory
                             </P>
                             <p class="memory-text-font">
-                                At the Tom Lee Centre in Vancouver of 2014??, I
+                                At the Tom Lee Centre in Vancouver of 2016, I
                                 played my heart out in front of two examiners in a one-hour
                                 performance. Despite my stage fright, I enjoyed the feeling of being
                                 able to demonstrate all the hard work I have put into practicing
