--- a/projects.html
+++ b/projects.html
@@ -36,13 +36,20 @@
             <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="projects-cover.jpg" alt="Projects Cover">
             </div>
+            <div class="centered">
+                <hr class="main-line">
+                <p id="header-text" class="main-header-font">
+                    PROJECTS
+                </p>
+                <hr class="main-line">
+            </div>
             <a href="#index-buttons" class="arrow-container no-decoration">
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <span class="arrow-text">Scroll down</span>
             </a>
-            <div class="margin-thirty">
+            <div id="index-buttons" class="margin-thirty">
                 <p class="header-font center">
                     coding - related projects
                 </p>
