--- a/resume.html
+++ b/resume.html
@@ -32,13 +32,20 @@
             <div>                                                                                                                                                                                                                                           
                 <img class="header-photo" src="resume-cover.jpg" alt="Resume Cover">
             </div>
+            <div class="centered">
+                <hr class="main-line">
+                <p id="header-text" class="main-header-font">
+                    RESUME
+                </p>
+                <hr class="main-line">
+            </div>
             <a href="#index-buttons" class="arrow-container no-decoration">
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <div class="chevron"></div>
                 <span class="arrow-text">Scroll down</span>
             </a>
-            <div class="margin-thirty center">
+            <div id="index-buttons" class="margin-thirty center">
                 <a href="CatherineChen_Resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
                 <p class="blurb-font">Want to hire me? Get in contact with me <a href="contact.html" class="no-decoration"><u>here</u>.</a></p>
             </div>
