adding blur to cover photos

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         </div>  
         <div class="content">
             <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="contact-cover.jpg" alt="Contact Cover">
+                <img class="header-photo" src="contact-cover-blur.jpg" alt="Contact Cover">
             </div>
             <div class="centered">
                 <hr class="main-line">
