--- a/experiences.html
+++ b/experiences.html
@@ -30,7 +30,7 @@
         </div>  
         <div class="content">
             <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="experiences-cover.jpg" alt="Experiences Cover">
+                <img class="header-photo" src="experiences-cover-blur.jpg" alt="Experiences Cover">
             </div>
             <div class="centered">
                 <hr class="main-line">
