--- a/interests.html
+++ b/interests.html
@@ -31,7 +31,7 @@
         </div>  
         <div class="content">
             <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="interests-cover.jpg" alt="Interests Cover">
+                <img class="header-photo" src="interests-cover-blur.jpg" alt="Interests Cover">
             </div>
             <div class="centered">
                 <hr class="main-line">
