--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         </div>   
         <div class="content">
             <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="projects-cover.jpg" alt="Projects Cover">
+                <img class="header-photo" src="projects-cover-blur.jpg" alt="Projects Cover">
             </div>
             <div class="centered">
                 <hr class="main-line">
