--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
         </div>  
         <div class="content">
             <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="resume-cover.jpg" alt="Resume Cover">
+                <img class="header-photo" src="resume-cover-blur.jpg" alt="Resume Cover">
             </div>
             <div class="centered">
                 <hr class="main-line">
