--- a/contact.html
+++ b/contact.html
@@ -29,22 +29,22 @@
             </nav>
         </div>  
         <div class="content">
-            <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="contact-cover-blur.jpg" alt="Contact Cover">
+            <div class="header-container">
+                <div>                                                                                                                                                                                                                                           
+                    <img class="header-photo" src="contact-cover-blur.jpg" alt="Contact Cover">
+                </div>
+                <div class="centered">
+                    <hr class="main-line">
+                    <p id="header-text" class="main-header-font">CONTACT</p>
+                    <hr class="main-line">
+                </div>
+                <a href="#index-buttons" class="arrow-container no-decoration">
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <span class="arrow-text">Scroll down</span>
+                </a>
             </div>
-            <div class="centered">
-                <hr class="main-line">
-                <p id="header-text" class="main-header-font">
-                    CONTACT
-                </p>
-                <hr class="main-line">
-            </div>
-            <a href="#index-buttons" class="arrow-container no-decoration">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <span class="arrow-text">Scroll down</span>
-            </a>
             <div id="index-buttons" class="margin-thirty">
                 <p class="header-font center">
                     Get in touch with me!
