--- a/experiences.html
+++ b/experiences.html
@@ -29,22 +29,22 @@
             </nav>
         </div>  
         <div class="content">
-            <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="experiences-cover-blur.jpg" alt="Experiences Cover">
+            <div class="header-container">
+                <div>                                                                                                                                                                                                                                           
+                    <img class="header-photo" src="experiences-cover-blur.jpg" alt="Experiences Cover">
+                </div>
+                <div class="centered">
+                    <hr class="main-line">
+                    <p id="header-text" class="main-header-font">EXPERIENCES</p>
+                    <hr class="main-line">
+                </div>
+                <a href="#index-buttons" class="arrow-container no-decoration">
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <span class="arrow-text">Scroll down</span>
+                </a>
             </div>
-            <div class="centered">
-                <hr class="main-line">
-                <p id="header-text" class="main-header-font">
-                    EXPERIENCES
-                </p>
-                <hr class="main-line">
-            </div>
-            <a href="#index-buttons" class="arrow-container no-decoration">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <span class="arrow-text">Scroll down</span>
-            </a>
             <div id="index-buttons">
                 <p class="header-font center margin-thirty">
                     ~ coming soon ~
@@ -62,6 +62,7 @@
                 <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="Script.js"></script>
     </body>
 </html>
