--- a/index.html
+++ b/index.html
@@ -29,25 +29,22 @@
             </nav>
         </div>
         <div class="content">
-            <div>
-                <img class="header-photo" src="AboutMeCover-blur.jpg" alt="About Me Cover">
+            <div class="header-container">
+                <div>
+                    <img class="header-photo" src="AboutMeCover-blur.jpg" alt="About Me Cover">
+                </div>
+                <div class="centered">
+                    <hr class="main-line">
+                    <p id="header-text" class="main-header-font">HOME</p>
+                    <hr class="main-line">
+                </div>
+                <a href="#index-buttons" class="arrow-container no-decoration">
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <span class="arrow-text">Scroll down</span>
+                </a>
             </div>
-            <div class="centered">
-                <hr class="main-line">
-                <!-- <p id="home" class="main-header-font">
-                    HOME
-                </p> -->
-                <p id="header-text" class="main-header-font">
-                    HOME
-                </p>
-                <hr class="main-line">
-            </div>
-            <a href="#index-buttons" class="arrow-container no-decoration">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <span class="arrow-text">Scroll down</span>
-            </a>
             <div id="index-buttons" class="photo-grid">
                 <div class="photo-grid__item photo-grid__item--1 container">
                     <a href="projects.html" alt="">
