--- a/interests.html
+++ b/interests.html
@@ -30,22 +30,22 @@
             </nav>
         </div>  
         <div class="content">
-            <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="interests-cover-blur.jpg" alt="Interests Cover">
+            <div class="header-container">
+                <div>                                                                                                                                                                                                                                           
+                    <img class="header-photo" src="interests-cover-blur.jpg" alt="Interests Cover">
+                </div>
+                <div class="centered">
+                    <hr class="main-line">
+                    <p id="header-text" class="main-header-font">INTERESTS</p>
+                    <hr class="main-line">
+                </div>
+                <a href="#index-buttons" class="arrow-container no-decoration">
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <span class="arrow-text">Scroll down</span>
+                </a>
             </div>
-            <div class="centered">
-                <hr class="main-line">
-                <p id="header-text" class="main-header-font">
-                    INTERESTS
-                </p>
-                <hr class="main-line">
-            </div>
-            <a href="#index-buttons" class="arrow-container no-decoration">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <span class="arrow-text">Scroll down</span>
-            </a>
             <div id="index-buttons" class="interests-blurb">
                 <p class="blurb-font justify"> Without a doubt, I have been passionate about many
                     things within my lifetime. As expected, some of these passions were
@@ -304,6 +304,7 @@
                 <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="Script.js"></script>
     </body>
 </html>
