--- a/projects.html
+++ b/projects.html
@@ -33,23 +33,23 @@
             </nav>
         </div>   
         <div class="content">
-            <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="projects-cover-blur.jpg" alt="Projects Cover">
+            <div class="header-container">
+                <div>                                                                                                                                                                                                                                           
+                    <img class="header-photo" src="projects-cover-blur.jpg" alt="Projects Cover">
+                </div>
+                <div class="centered">
+                    <hr class="main-line">
+                    <p id="header-text" class="main-header-font">PROJECTS</p>
+                    <hr class="main-line">
+                </div>
+                <a href="#index-buttons" class="arrow-container no-decoration">
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <span class="arrow-text">Scroll down</span>
+                </a>
             </div>
-            <div class="centered">
-                <hr class="main-line">
-                <p id="header-text" class="main-header-font">
-                    PROJECTS
-                </p>
-                <hr class="main-line">
-            </div>
-            <a href="#index-buttons" class="arrow-container no-decoration">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <span class="arrow-text">Scroll down</span>
-            </a>
-            <div id="index-buttons" class="margin-thirty">
+            <div id="index-buttons">
                 <p class="header-font center">
                     coding - related projects
                 </p>
@@ -602,6 +602,7 @@
                 <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="Script.js"></script>
     </body>
 </html>
