--- a/resume.html
+++ b/resume.html
@@ -29,23 +29,23 @@
             </nav>
         </div>  
         <div class="content">
-            <div>                                                                                                                                                                                                                                           
-                <img class="header-photo" src="resume-cover-blur.jpg" alt="Resume Cover">
+            <div class="header-container">
+                <div>                                                                                                                                                                                                                                           
+                    <img class="header-photo" src="resume-cover-blur.jpg" alt="Resume Cover">
+                </div>
+                <div class="centered">
+                    <hr class="main-line">
+                    <p id="header-text" class="main-header-font">RESUME</p>
+                    <hr class="main-line">
+                </div>
+                <a href="#index-buttons" class="arrow-container no-decoration">
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <div class="chevron"></div>
+                    <span class="arrow-text">Scroll down</span>
+                </a>
             </div>
-            <div class="centered">
-                <hr class="main-line">
-                <p id="header-text" class="main-header-font">
-                    RESUME
-                </p>
-                <hr class="main-line">
-            </div>
-            <a href="#index-buttons" class="arrow-container no-decoration">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <span class="arrow-text">Scroll down</span>
-            </a>
-            <div id="index-buttons" class="margin-thirty center">
+            <div id="index-buttons" class="view-resume center">
                 <a href="CatherineChen_Resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
                 <p class="blurb-font">Want to hire me? Get in contact with me <a href="contact.html" class="no-decoration"><u>here</u>.</a></p>
             </div>
@@ -64,6 +64,7 @@
                 <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="Script.js"></script>
     </body>
 </html>
