--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 </p>
             </div>
             <div class="contact-container">
-                <form method="POST" action="https://script.google.com/macros/s/AKfycbw6GEuq3qsNgfMoIRNbn6oigbv68HBse_dxdnMULBLGNYfcCgHj/exec">
+                <form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbw6GEuq3qsNgfMoIRNbn6oigbv68HBse_dxdnMULBLGNYfcCgHj/exec">
                     <div class="contact-grid">
                         <div class="contact-grid__item contact-grid__item--1">
                             <input required type="text" id="fullname" name="full name" placeholder="full name">
@@ -73,8 +73,11 @@
                   
                   <br>
 
-                  <button>Submit</button>
-                <p id="mail-status"></p>
+                  <button class="submit">Submit</button>
+
+                <div style="display: none;" class="thankyou_message">
+                    <p class="info-text-font">Thanks for contacting me! I will get back to you shortly!</p>
+                </div>
                 </form>
             </div>
             <div class="socials-style">
@@ -90,6 +93,7 @@
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
         <script src="Script.js"></script>
     </body>
 </html>
